# OS5sem

./: CMakeLists.txt  Work1.cpp  first  first.cpp  lab3marina  lab_1.cpp  lololo  lolololo  marina  marina1  marina3.cpp  marina_lab4.sh  marina_lab_3  marina_lab_3.cpp  marinamarina.cpp  pupupupu  second  second.cpp  sort_text_files.sh  yndx.py
лаба 1/: main01.cpp  os_test.cpp  oslab2.cpp  заметки.txt
