cmake_minimum_required(VERSION 3.29)
project()

set(CMAKE_CXX_STANDARD 14)

add_executable(
        "лаба 1/main.cpp"
        "лаба 1/os_lab1.cpp"
        "лаба 1/main01.cpp"
        "лаба 1/os_test.cpp"
        "лаба 1/oslab2.cpp"
        "лаба 1/oslab2.cpp"
        "лаба 1/oslab2.cpp"
        Work1.cpp
)
